# nlj_viewer

./: .env.example  .env.localstack  .gitignore  BACKLOG.md  BUGS.md  CLAUDE.md  DEVELOPMENT.md  Docker-README.md  POST_ACTIVITY.md  README-CALCOM-INTEGRATION.md  README.md  callcoach-api.service  deploy-callcoach.sh  docker-compose.analytics.yml  docker-compose.dev.yml  docker-compose.localstack.yml  docker-compose.prod.yml  docker-compose.rds.yml  docker-compose.yml  index.html  nginx-callcoach-fixed.conf  nginx-callcoach.conf  package-lock.json  package.json  reset-dev-environment.sh  setup-dev-db.sh  test-results.json  vite.config.ts  vitest.config.ts
backend/: .env.example  .flake8  .gitignore  BACKEND_SETUP.md  Dockerfile  Dockerfile.consumer  Dockerfile.faststream  FASTSTREAM_MIGRATION.md  README.md  alembic.ini  consolidated_schema.sql  consumer.py  debug_content.py  docker-compose.yml  nlj-schema-docs.md  pyproject.toml  pytest.ini  run_faststream.py  run_migration.py  start_faststream_consumer.py  test_connection.py  test_content_api.py  test_elevenlabs.py  unified_consumer.py
backend/alembic/: env.py
backend/alembic/versions/: 001_consolidated_schema_with_content_studio.py  001_initial_consolidated_schema.py  002_add_shared_tokens.py  002_create_node_tables.py  003_add_media_items.py  003_make_activity_id_nullable.py  004_add_calcom_training_sessions.py  2025_07_28_1139-4a61aa3c207c_add_version_aware_approval_workflow_.py  2025_07_28_1434-dac4479d39ec_add_multi_stage_workflow_models.py  2025_07_28_1436-3cb8325d225a_add_workflow_template_tables_manual.py  2025_07_30_1049-8643bf2351a8_add_player_and_learner_roles.py  2025_08_01_1200-add_content_studio_tables.py  2025_08_21_1302-46599381bb39_initial_schema_with_proper_enum_handling.py  2025_08_21_1311-d6709d231a6f_fix_additional_enum_columns_source_.py
backend/app/: __init__.py  health.py  main.py
backend/app/api/: analytics.py  auth.py  calcom_integration.py  content.py  database.py  generation.py  knowledge_extraction.py  media.py  node_tagging.py  nodes.py  notifications.py  recommendations.py  registrations.py  shared_tokens.py  sources.py  survey_analytics.py  survey_analytics.py.deprecated  training_programs.py  training_programs_old.py  training_registrations.py  training_sessions.py  users.py  workflow.py
backend/app/brokers/: __init__.py  kafka_broker.py
backend/app/core/: __init__.py  config.py  database.py  database_manager.py  deps.py  security.py  user_context.py
backend/app/handlers/: __init__.py  auto_tagging_handlers.py  content_handlers.py  knowledge_extraction_handlers.py  node_interaction_handlers.py  survey_handlers.py  training_handlers.py
backend/app/middleware/: __init__.py  debug_middleware.py  xapi_subscriber_middleware.py  xapi_validation.py
backend/app/models/: __init__.py  activity_source.py  content.py  media.py  (+9 more)
backend/scripts/: README.md  clean_database.py  create_enhanced_survey.py  debug_content.py  extract_nodes_migration.py  generate_fake_analytics_data.py  generate_realistic_survey_responses.py  generate_survey_responses.py  load_sample_surveys.py  load_static_content.py  migrate_sample_content.py  normalize_existing_content.py  reseed_database.py  reseed_users_pbkdf2.py  reset_database.py  run_consumer_now.py  seed_database.py  seed_database_modern.py  seed_essential_only.py  seed_full_demo.py  seed_users_and_basic_content.py  seed_users_only.py  setup_kafka_topics.py  setup_redpanda_topics.py  start_kafka_consumer.py  test_analytics_integration.py  test_connection.py  test_migration_simple.py
backend/tests/: conftest.py  test_content_generation_flow.py  test_orm_services.py  test_repositories.py  test_repositories_simple.py  test_service_schemas_integration.py  test_setup.py  test_user_query_use_cases.py
(+630 files in other folders)
