[project]
name = "nlj-platform-backend"
version = "0.1.0"
description = "FastAPI backend for NLJ Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core FastAPI dependencies
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    # Database
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "asyncpg",
    # Data validation and serialization
    "pydantic",
    "pydantic-settings",
    "email-validator",
    # Authentication
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    # HTTP client for external integrations
    "httpx",
    # Excel file processing (for Trivie imports)
    "openpyxl",
    # Environment management
    "python-dotenv",
    "greenlet>=3.2.3",
    # Claude API integration
    "anthropic",
    # Document conversion
    "python-docx",
    "pypdf",
    "python-magic",
    # File handling
    "aiofiles",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-postgresql",
    "black",
    "isort",
    "mypy",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 88
